--- a/gray.css
+++ b/gray.css
@@ -27,13 +27,12 @@ button {
 /* Simple Gradient */
 .sg {
 	background: var(--bg-t1);
-	color: rgba(255, 255, 255, 0.7) !important;
+	color: rgba(255, 255, 255, 0.7);
 	border: none;
 	outline: none;
 	box-shadow: none;
 	font-size: 150%;
 	font-weight: 500;
-	color: white;
 	padding: 20px 50px;
 	border-radius: 15px;
 	position: relative;
@@ -43,7 +42,7 @@ button {
 
 .sg:hover {
 	background: var(--bg-t2);
-	color: rgba(255, 255, 255, 0.8) !important;
+	color: rgba(255, 255, 255, 0.8);
 	--s: rgba(255, 255, 255, 0.05);
 	box-shadow: 50px 0 50px var(--s), -50px 0 50px var(--s);
 }
